--- a/index.html
+++ b/index.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal de noticioas</title>
-  <link rel="stylesheet" href="styles/index.css">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portal de noticioas</title>
+    <link rel="stylesheet" href="styles/index.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
+        <div>
+          <img src="assets/icons/List.svg" alt="icone de menu" />
+          <strong>Menu</strong>
+        </div>
 
-  
-</head>
-<body>
-  <header class="container">
-    <nav id="primary" class="grid grid-flow-col">
-      <div>
-        <img src="assets/icons/List.svg" alt="icone de menu">
-        <strong>Menu</strong>
-      </div>
+        <div>
+          <img src="assets/Logo.svg" alt="tech news logo" />
+        </div>
 
-      <div>
-        <img src="assets/Logo.svg" alt="tech news logo">
-      </div>
+        <div>
+          <strong>Buscar</strong>
+          <img
+            src="assets/icons/MagnifyingGlass.svg"
+            alt="icone de lupa para pesquisa"
+          />
+        </div>
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
+        <a href="">Inteligência Artificial</a>
+        <a href="">Blockchain </a>
+        <a href="">Hologramas</a>
+        <a href="">Internet</a>
+        <a href="">Vestíveis</a>
+        <a href="">Realidade Aumentada</a>
+        <a href="">Realidade Virtual</a>
+      </nav>
+    </header>
+    <main class="grid container">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <div>
+          <img src="assets/imagens/Image 01.png" alt="" />
+        </div>
 
-      <div>
-        <strong>Buscar</strong>
-        <img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa para pesquisa">
-      </div>
-    </nav>
-    <nav id="secondary" class="grid grid-flow-col">
-    <a href="">Inteligência Artificial</a>
-    <a href="">Blockchain </a>
-    <a href="">Hologramas</a>
-    <a href="">Internet</a>
-    <a href="">Vestíveis</a>
-    <a href="">Realidade Aumentada</a>
-    <a href="">Realidade  Virtual</a>
-    </nav>
-  </header>
-  <h1></h1>
-  <h2></h2>
-  <a href="#"></a>
-  
-</body>
+        <div class="grid grid-cols-2 gap-16">
+          <div>
+            <img src="assets/imagens/Image 02.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/imagens/Image 03.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/imagens/Image 04.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/imagens/Image 05.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
