--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal de noticioas</title>
     <link rel="stylesheet" href="styles/index.css" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
   </head>
   <body>
     <header class="container">
@@ -95,6 +93,40 @@
           </figcaption>
 
           </figure>
+        </div>
+      </section>
+      <section id="weekly">
+        <header class="grid grid-flow-col">
+          <h3>Mais lidas da semana</h3>
+          <a href="#" class="grid grid-flow-col"></a>
+          <strong>Ver tudo</strong>
+          <span></span>
+        </header>
+        <div class="grid gap-16">
+          <figure>
+            <span calss="content-tag">Veículos</span>
+            <img src="assets/imagens/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
+            <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+          </figure>
+
+          <figure>
+            <span calss="content-tag">Hologramas</span>
+            <img src="assets/imagens/Image 07.png" alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
+            <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...</p>
+          </figure>
+
+          <figure>
+            <span calss="content-tag">Realidade virtual</span>
+            <img src="assets/imagens/Image 08.png" alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
+            <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...</p>
+          </figure>
+
+          <figure>
+            <span calss="content-tag">Internet</span>
+            <img src="assets/imagens/Image 09.png" alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
+            <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+          </figure>
+          
         </div>
       </section>
     </main>
