--- a/index.html
+++ b/index.html
@@ -95,13 +95,16 @@
           </figure>
         </div>
       </section>
+      
       <section id="weekly">
         <header class="grid grid-flow-col">
           <h3>Mais lidas da semana</h3>
-          <a href="#" class="grid grid-flow-col"></a>
+          <a href="#" class="grid grid-flow-col">
           <strong>Ver tudo</strong>
           <span></span>
+          </a>
         </header>
+
         <div class="grid gap-16">
           <figure>
             <span calss="content-tag">Veículos</span>
